# claude-scrollback

./: .gitignore  README.md  pyproject.toml  server.py  viewer.py
.github/workflows/: deploy.yml
claude_scrollback/: __main__.py  generator.py  server.py
example/projects/api-client/: b2c3d4e5-f6a7-8901-bcde-f12345678901.jsonl
example/projects/datatools/: a1b2c3d4-e5f6-7890-abcd-ef1234567890.jsonl
example/projects/webapp/: c3d4e5f6-a7b8-9012-cdef-123456789012.jsonl
