[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-scrollback"
version = "0.1.0"
description = "Lightweight viewer for Claude Code session transcripts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["claude", "anthropic", "claude-code", "ai", "transcript", "viewer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.scripts]
claude-scrollback = "claude_scrollback.__main__:main"

[project.optional-dependencies]
build = ["build", "twine"]

[tool.setuptools.packages.find]
include = ["claude_scrollback*"]
